--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    width: 100%;
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
@@ -81,10 +82,6 @@ img {
     margin-bottom: 20px;
 }
 
-.mid-container {
-
-}
-
 .bottom-container {
     position: relative;
     margin: 100px auto auto auto;
@@ -126,10 +123,7 @@ img {
 
 .mountain {
     position: relative;
-    width: 500px;
-    height: 400px;
     z-index: 2;
-    top: 10px;
     object-fit: contain;
 }
 
