--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ img {
     position: relative;
     z-index: 2;
     object-fit: contain;
+    top:10px;
 }
 
 
@@ -248,10 +249,10 @@ img {
         width: 75%;
     }
 
-    .mountain {
-        width: 400x;
-        height: 300px;
-    }
+}
+
+@media only screen and (max-width: 400px) {
+
 }
 
 @media only screen and (max-width: 1280px) {
