--- a/styles.css
+++ b/styles.css
@@ -252,7 +252,10 @@ img {
 }
 
 @media only screen and (max-width: 400px) {
-
+    .mountain {
+        width: 50%;
+        height: 50%;
+    }
 }
 
 @media only screen and (max-width: 1280px) {
