--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ img {
     position: relative;
     padding-top: 100px;
     margin-bottom: 20px;
+    width: auto;
+    height: auto;
 }
 
 .bottom-container {
@@ -125,7 +127,7 @@ img {
     margin: 0 auto;
     z-index: 2;
     object-fit: contain;
-    overflow: hidden;
+    max-width: 100%;
 }
 
 
