--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ img {
         position: absolute;
         width: 150px;
         height: 150px;
-        left: 150px;
+        left: 50px;
         bottom: 200px;
         z-index: 0;
     }
@@ -127,7 +127,8 @@ img {
     margin: 0 auto;
     z-index: 2;
     object-fit: contain;
-    max-width: 100%;
+    height: 200px;
+    width: 200px;
 }
 
 
@@ -258,5 +259,6 @@ img {
     .skill-row {
         width: 75%;
     }
+            
 }
 
