--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -73,6 +74,7 @@ img {
     width: auto;
     max-width: 100%;
     height: auto;
+    pointer-events: none;
 }
 
 .top-container {
